--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </div>
         </div>
         <!--
-            <div class="oko"> <img src="Img/poisk.jpg" alt="poisk"> </div>
+            <div class="oko"> <img src="poisk.jpg" alt="poisk"> </div>
         </div>-->
         <div class="vibor">
             <ul>
@@ -47,12 +47,12 @@
                 <li>classic</li>
             </ul>
         </div>
-        <div class="slider01"> <img src="Img/slider01.jpg" alt="slider01">
+        <div class="slider01"> <img src="slider01.jpg" alt="slider01">
             <div class="showfnc">
                 <ul class="BlPict">
-                    <li> <img class="imgVT" src="Img/fnchair01.jpg" alt="Blue fnchair"></li>
-                    <li> <img class="imgVT" src="Img/fnchair02.jpg" alt="DarkBlue fnchair"></li>
-                    <li> <img class="imgVT" src="Img/fnchair03.jpg" alt="Rose fnchair"></li>
+                    <li> <img class="imgVT" src="fnchair01.jpg" alt="Blue fnchair"></li>
+                    <li> <img class="imgVT" src="fnchair02.jpg" alt="DarkBlue fnchair"></li>
+                    <li> <img class="imgVT" src="fnchair03.jpg" alt="Rose fnchair"></li>
                 </ul>
             </div>
         </div>
@@ -61,7 +61,7 @@
             <h4> HOT DEAL</h4>
             <h2> $ <span> 36,7 </span>/sq</h2>
             <button>
-                <h3>order&nbsp;us <img src="Img/arrow.png" alt="arrow"></h3></button>
+                <h3>order&nbsp;us <img src="arrow.png" alt="arrow"></h3></button>
             <div class="text01">
                 <p>The majesty of&nbsp;Mountains&nbsp;&mdash; Ugmonk style.
                     <br>
@@ -70,7 +70,7 @@
                     <br>commodi, consequatur suscipit, dolores iusto deleniti amet possimus inventore totam nostrum necessitatibus!
                     <br>
                     <br>Eos voluptatum, dolorum vel perferendis ducimus at&nbsp;impedit asperiores nihil optioitaque magnam doloremque eveniet sit praesentium enim placeat odio, numquam, laudantium!</div>
-            <!-- <img class="text01" src="Img/The%20majesty%20of%20Mountains.png" alt="Text01" > --></div>
+            </div>
     </div>
 </body>
 
