--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="conteiner">
         <div class="topper">
             <div class="logo">
-                <a href="index.html"><img class="logoimg" src="Img/Logoleft.jpg" alt="#"> INTERIOR</a>
+                <a href="index.html"><img class="logoimg" src="Logoleft.jpg" alt="#"> INTERIOR</a>
                 <ul class="menu">
                     <li><a href="index.html">home</a></li>
                     <li><a href="#">products</a></li>
