--- a/index.html
+++ b/index.html
@@ -3,13 +3,17 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <style>
         {
             font-family: montserrat;
         }
     </style>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <title>interior-product-deails </title>
 </head>
 
@@ -63,14 +67,61 @@
             <button>
                 <h3>order&nbsp;us <img src="arrow.png" alt="arrow"></h3></button>
             <div class="text01">
-                <p>The majesty of&nbsp;Mountains&nbsp;&mdash; Ugmonk style.
+                <p class="clear">The majesty of&nbsp;Mountains&nbsp;&mdash; Ugmonk style.
                     <br>
                     <br> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim ullam temporibus rem deserunt animi quasi dignissimos
                     <br>
                     <br>commodi, consequatur suscipit, dolores iusto deleniti amet possimus inventore totam nostrum necessitatibus!
                     <br>
                     <br>Eos voluptatum, dolorum vel perferendis ducimus at&nbsp;impedit asperiores nihil optioitaque magnam doloremque eveniet sit praesentium enim placeat odio, numquam, laudantium!</div>
+        </div>
+        <div class="topper2">
+            <div class="topper02">Related Products</div>
+            <div class="topper03">Explore all</div>
+            <div class="arrowimg"><i class="fas fa-angle-right fa-lg"></i></div>
+        </div>
+        <div class="pict02">
+            <div class="product-11"><img src="product-11.jpg" alt="product-11"></div>
+            <div class="product-21"><img src="product-21.jpg" alt="product-21"></div>
+            <div class="product-31"><img src="product-31.jpg" alt="product-31"></div>
+        </div>
+        <!-- Usage as a class -->
+        <div class="clearfix"></div>
+    </div>
+    <div class="footer">
+        <div class=Contacts>
+            <div class=ContactUs>
+                <h3>Contact us</h3>
+                <h4><p> 132A Bridge Road Richmond VIC</p>
+            <p>Australia.</p><br><p>Talk to as on 1300 132 </p><p>info@interior.com</p></h4></div>
+            <div class=useful>
+                <h3> useful information</h3>
+                <div class="refleft">
+                    <h4><p>sales terms</p><p>customer care</p><p>delivery</p></h4> </div>
+                <div class="refright">
+                    <h4><p>architect accounts</p><p>careers</p><p>exchanges &amp; returns</p></h4> </div>
             </div>
+            <div class=stay>
+                <h3> let's stay in touch!</h3>
+                <p>Subscribe to know about our latest news, products and</p>
+                <p>special offers jast for subscribers</p>
+                <br>
+                <form class="let-email">
+                    <div class="form-email">
+                        <input type="email" class="form-control" size="100px" id="#" placeholder="your email address"> </div>
+                </form>
+            </div>
+            <div class="lower">
+                <div class="lowerpart"> &copy;copyrite. interior 2016. all right reserved. </div>
+                <div class="lowerpart">
+                    <div class="ibrandsf"><i class="fab fa-facebook fa-3x"></i></div>
+                    <div class="ibrandst"><i class="fab fa-twitter-square fa-3x"></i></div>
+                    <div class="ibrandsg"><i class="fab fa-google-plus fa-3x"></i></div>
+                    <div class="ibrandsp"><i class="fab fa-pinterest-p fa-3x"></i></div>
+                </div>
+                <div class="lowerpart"> terms &amp; conditions / privacy policy &amp; cookies</div>
+            </div>
+        </div>
     </div>
 </body>
 
