--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/brands.css" integrity="sha384-rf1bqOAj3+pw6NqYrtaE1/4Se2NBwkIfeYbsFdtiR6TQz0acWiwJbv1IM/Nt/ite" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/fontawesome.css" integrity="sha384-1rquJLNOM3ijoueaaeS5m+McXPJCGdr5HcA03/VHXxcp2kX2sUrQDmFc3jR5i/C7" crossorigin="anonymous">
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+    <link rel="stylesheet" href="../geekone/wOtladka/CSS/cssawesome/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
     <style>
         {
             font-family: montserrat;
@@ -77,8 +81,7 @@
         </div>
         <div class="topper2">
             <div class="topper02">Related Products</div>
-            <div class="topper03">Explore all</div>
-            <div class="arrowimg"><i class="fas fa-angle-right fa-lg"></i></div>
+            <div class="topper03"><a id="exp" href="#"><span>Explore all</span><div class="div-fa"><i class="fas fa-angle-right fa-lg"></i></div></a> </div>
         </div>
         <div class="pict02">
             <div class="product-11"><img src="product-11.jpg" alt="product-11"></div>
@@ -107,22 +110,25 @@
                 <p>special offers jast for subscribers</p>
                 <br>
                 <form class="let-email">
-                    <div class="form-email">
-                        <input type="email" class="form-control" size="100px" id="#" placeholder="your email address"> </div>
-                </form>
+                    <input type="email" class="form-control" size="100px" id="#" placeholder="your email address"> </form>
+                <button class="but-email"><i class=" fab fa-telegram-plane fa-2x fa-pull-left fa-border "></i></button>
             </div>
             <div class="lower">
-                <div class="lowerpart"> &copy;copyrite. interior 2016. all right reserved. </div>
+                <div class="lowerpart"><i class="far fa-copyright fa-ms"></i> copyrite. interior 2016. all right reserved. </div>
                 <div class="lowerpart">
-                    <div class="ibrandsf"><i class="fab fa-facebook fa-3x"></i></div>
-                    <div class="ibrandst"><i class="fab fa-twitter-square fa-3x"></i></div>
-                    <div class="ibrandsg"><i class="fab fa-google-plus fa-3x"></i></div>
-                    <div class="ibrandsp"><i class="fab fa-pinterest-p fa-3x"></i></div>
+                    <div class="ibrandsf"><i class="fab fa-facebook fa-2x fa-pull-left"></i></div>
+                    <div class="ibrandst"><i class="fab fa-twitter-square fa-2x"></i></div>
+                    <div class="ibrandsg"><i class="fab fa-google-plus fa-2x"></i></div>
+                    <div class="ibrandsp"><i class="fab fa-pinterest-p fa-2x fa-pull-right"></i></div>
                 </div>
-                <div class="lowerpart"> terms &amp; conditions / privacy policy &amp; cookies</div>
+                <div class="lowerpart">terms &amp; conditions / privacy policy &amp; cookies</div>
             </div>
         </div>
     </div>
+    <!-- Optional JavaScript -->
+    <!-- jQuery (necessary  for Bootstrap's JavaScript plugins) -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
 </body>
 
 </html>
