--- a/LessonOne/index.html
+++ b/LessonOne/index.html
@@ -14,15 +14,36 @@
     <link rel="stylesheet" href="../geekone/wOtladka/CSS/cssawesome/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
     <style>
         {
-            font-family: montserrat;
+            font-family: Arial;
         }
     </style>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <title>interior-product-deails </title>
+    <title>simple_psd_template</title>
 </head>
 
 <body>
-    <div class="footer">
+    <div class="conteiner">
+        <header>
+            <nav>
+                <h1>Product name</h1>
+                <br>
+                <ul class="ptitca">
+                    <li>Put on information about your product </li>
+                    <li>A detailed description of your product</li>
+                    <li>Tell us about the advantages and merits</li>
+                    <li>Associate the page with the payment system</li>
+                </ul>
+            </nav>
+            <div class="clearbox">
+                   
+               </div>
+        </header>
+        <aside> </aside>
+        <main> </main>
+        <section> </section>
+    </div>
+    <footer>
+        <adress> </adress>
         <div class=Contacts>
             <div class=ContactUs>
                 <h3>Contact us</h3>
@@ -55,7 +76,7 @@
                 <div class="lowerpart">terms &amp; conditions / privacy policy &amp; cookies</div>
             </div>
         </div>
-    </div>
+    </footer>
     <!-- Optional JavaScript -->
     <!-- jQuery (necessary  for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js"></script>
