--- a/LessonOne/index.html
+++ b/LessonOne/index.html
@@ -43,7 +43,7 @@
         <section> </section>
     </div>
     <footer>
-        <adress> </adress>
+        <adress> 
         <div class=Contacts>
             <div class=ContactUs>
                 <h3>Contact us</h3>
@@ -76,6 +76,7 @@
                 <div class="lowerpart">terms &amp; conditions / privacy policy &amp; cookies</div>
             </div>
         </div>
+        </adress>
     </footer>
     <!-- Optional JavaScript -->
     <!-- jQuery (necessary  for Bootstrap's JavaScript plugins) -->
